--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -549,7 +549,8 @@
       - name: Reports with PDF Content
         href: articles/report-designer/report-designer-for-winforms/create-reports/reports-with-pdf-content.md
       - name: Reports with a Visual PDF Signature
-        href: articles/report-designer/report-designer-for-winforms/create-reports/reports-with-visual-pdf-signature.md    - name: Configure Design Settings
+        href: articles/report-designer/report-designer-for-winforms/create-reports/reports-with-visual-pdf-signature.md
+    - name: Configure Design Settings
       href: articles/report-designer/report-designer-for-winforms/configure-design-settings.md
       items:
       - name: Change a Report's Measurement Units
