--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -619,7 +619,11 @@
       - name: Table of Contents
         href: articles/report-designer/use-report-elements/use-basic-report-controls/table-of-contents.md
       - name: Page Info
-        href: articles/report-designer/use-report-elements/use-basic-report-controls/page-info.md         
+        href: articles/report-designer/use-report-elements/use-basic-report-controls/page-info.md
+      - name: PDF Content
+        href: articles/report-designer/use-report-elements/use-basic-report-controls/pdf-content.md
+      - name: PDF Signature
+        href: articles/report-designer/use-report-elements/use-basic-report-controls/pdf-signature.md
     - name: Use Tables
       href: articles/report-designer/use-report-elements/use-tables.md
       items:
