--- a/dashboard-for-web/toc.yml
+++ b/dashboard-for-web/toc.yml
@@ -73,7 +73,7 @@
         href: articles/web-dashboard-designer-mode/dashboard-item-settings/chart/axes.md
       - name: Orientation
         href: articles/web-dashboard-designer-mode/dashboard-item-settings/chart/orientation.md
-      - name: Consitional Formatting
+      - name: Conditional Formatting
         href: articles/web-dashboard-designer-mode/dashboard-item-settings/chart/conditional-formatting.md
     - name: Scatter Chart
       href: articles/web-dashboard-designer-mode/dashboard-item-settings/scatter-chart.md
