Renamed topic in toc

--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -64,7 +64,7 @@
     href: articles/diagram/work-with-chart-elements.md       
   - name: Chart Layout
     href: articles/diagram/chart-layout.md
-  - name: Page Settings
+  - name: Page and View Settings
     href: articles/diagram/page-and-view-settings.md
   - name: Export to an Image
     href: articles/diagram/export-to-an-image.md
