--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -511,6 +511,8 @@
         href: articles/report-designer/report-designer-for-winforms/bind-to-data/bind-a-report-to-a-csv-file.md   
       - name: Bind a Report to JSON data
         href: articles/report-designer/report-designer-for-winforms/bind-to-data/bind-a-report-to-json-data.md
+      - name: Bind a Report to a MongoDB Instance
+        href: articles/report-designer/report-designer-for-winforms/bind-to-data/bind-a-report-to-a-mongodb-instance.md
       - name: Bind a Report to an XPO Persistent Object
         href: articles\report-designer\report-designer-for-winforms\bind-to-data\bind-a-report-to-an-xpo-persistent-object.md        
       - name: Bind a Report to a Join-Based Federated Data Source
