--- a/dashboard-for-desktop/toc.yml
+++ b/dashboard-for-desktop/toc.yml
@@ -30,6 +30,8 @@
       href: articles/dashboard-designer/provide-data/binding-to-object-data-sources.md
     - name: Binding to XPO Data Sources
       href: articles/dashboard-designer/provide-data/binding-to-XPO-data-sources.md
+    - name: Binding to MongoDB
+      href: articles/dashboard-designer/provide-data/binding-to-mongodb.md
   - name: Work with Data
     href: articles/dashboard-designer/work-with-data.md
     items:
