--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -213,11 +213,11 @@
     href: articles/gantt/work-time-rules.md
   - name: Data Editing
     items:
-    - name: Add, Edit, and Delete Tasks
+    - name: Add, Edit and Delete Tasks
       href: articles/gantt/data-editing/modify-tasks.md
     - name: Add and Delete Dependencies
       href: articles/gantt/data-editing/modify-dependencies.md
-    - name: Add, Edit, and Delete Resources
+    - name: Add, Edit and Delete Resources
       href: articles/gantt/data-editing/modify-resources.md
 - name: Grid
   href: articles/grid.md
