--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -205,8 +205,12 @@
   items:
   - name: Context Menu
     href: articles/gantt/context-menu.md
+  - name: Export to PDF
+    href: articles/gantt/export-to-pdf.md
   - name: Toolbar
     href: articles/gantt/toolbar.md
+  - name: Work Time Rules
+    href: articles/gantt/work-time-rules.md
   - name: Data Editing
     items:
     - name: Add, Edit and Delete Tasks
