--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -556,6 +556,8 @@
         href: articles/report-designer/report-designer-for-winforms/create-reports/reports-with-cross-band-content-and-populated-empty-space.md
       - name: Reports with PDF Content
         href: articles/report-designer/report-designer-for-winforms/create-reports/reports-with-pdf-content.md
+      - name: Reports with Embedded PDF Content
+        href: articles/report-designer/report-designer-for-winforms/create-reports/reports-with-embedded-pdf-content.md
       - name: Reports with a Visual PDF Signature
         href: articles/report-designer/report-designer-for-winforms/create-reports/reports-with-visual-pdf-signature.md
     - name: Configure Design Settings
