--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -556,8 +556,10 @@
       href: articles/report-designer/create-reports/interactive-e-forms.md
     - name: Reports with Cross-Band Content and Populated Empty Space
       href: articles/report-designer/create-reports/reports-with-cross-band-content-and-populated-empty-space.md
-    - name: Reports with PDF Content
-      href: articles/report-designer/create-reports/reports-with-pdf-content.md
+    - name: Reports Merged with PDF
+      href: articles/report-designer/create-reports/reports-merged-with-pdf.md
+    - name: Reports with Embedded PDF Content
+      href: articles/report-designer/create-reports/reports-with-embedded-pdf-content.md
     - name: Reports with Visual PDF Signature
       href: articles/report-designer/create-reports/reports-with-visual-pdf-signature.md
   - name: Configure Design Settings
