--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -1203,7 +1203,7 @@
         href: articles/report-designer/report-designer-for-wpf/interface-elements/report-explorer.md
       - name: Group and Sort Panel
         href: articles/report-designer/report-designer-for-wpf/interface-elements/group-and-sort-panel.md
-      - name: Properties Panel
+      - name: Properties Window
         href: articles/report-designer/report-designer-for-wpf/interface-elements/properties-panel.md
       - name: Design Surface
         href: articles/report-designer/report-designer-for-wpf/interface-elements/design-surface.md
