--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -899,8 +899,10 @@
         href: articles/report-designer/report-designer-for-winforms/use-expressions/expression-language.md
       - name: Functions in Expressions
         href: articles/report-designer/report-designer-for-winforms/use-expressions/functions-in-expressions.md
-      - name: How to: Use Expressions
+      - name: "How to: Use Expressions"
         href: articles/report-designer/report-designer-for-winforms/use-expressions/how-to-use-expressions.md
+      - name: Data Binding Modes
+        href: articles/report-designer/report-designer-for-winforms/use-expressions/data-binding-modes.md
     - name: Use Report Scripts
       href: articles/report-designer/report-designer-for-winforms/use-report-scripts.md
     - name: Print, Preview and Export Reports
