--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -951,6 +951,8 @@
           href: articles/report-designer/report-designer-tools/ui-panels/field-list.md
         - name: Report Explorer
           href: articles/report-designer/report-designer-tools/ui-panels/report-explorer.md
+        - name: Report Design Analyzer
+          href: articles/report-designer/report-designer-tools/ui-panels/report-design-analyzer.md
 - name: Ribbon
   href: articles/ribbon.md
   items:
