--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -567,9 +567,9 @@
   - name: Configure Design Settings
     href: articles/report-designer/configure-design-settings.md
     items:
-    - name: Change a Report's Measurement Units
+    - name: Change Report Measurement Units
       href: articles/report-designer/configure-design-settings/change-a-report-measurement-units.md
-    - name: Change a Report's Page Settings
+    - name: Change Report Page Settings
       href: articles/report-designer/configure-design-settings/change-a-report-page-settings.md
     - name: Enable the Right-To-Left Layout
       href: articles/report-designer/configure-design-settings/enable-the-right-to-left-layout.md  
