--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -533,6 +533,14 @@
       href: articles/report-designer/bind-to-data/bind-a-report-to-json-data.md   
     - name: Bind a Report to an Object Data Source
       href: articles/report-designer/bind-to-data/bind-a-report-to-an-object-data-source.md
+    - name: Bind a Report to a Join-Based Federated Data Source
+      href: articles/report-designer/bind-to-data/bind-a-report-to-a-join-based-federated-data-source.md
+    - name: Bind a Report to a Union-Based Federated Data Source
+      href: articles/report-designer/bind-to-data/bind-a-report-to-a-union-based-federated-data-source.md
+    - name: Bind a Report to a Transformation-Based Data Source
+      href: articles/report-designer/bind-to-data/bind-a-report-to-a-transformation-based-data-source.md
+    - name: Bind a Report to a Federated Master-Detail Data Source
+      href: articles/report-designer/bind-to-data/bind-a-report-to-a-federated-master-detail-data-source.md
   - name: Create Reports
     href: articles/report-designer/create-reports.md
     items:
