--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -3,35 +3,6 @@
   items:
   - name: Chart Designer
     href: articles/charting/chart-designer.md
-  - name: Chart Wizard
-    href: articles/charting/chart-wizard.md
-    items:
-    - name: Chart Type Page
-      href: articles/charting/chart-wizard/chart-type-page.md
-    - name: Appearance Page
-      href: articles/charting/chart-wizard/appearance-page.md
-    - name: Series Page
-      href: articles/charting/chart-wizard/series-page.md
-    - name: Data Page
-      href: articles/charting/chart-wizard/data-page.md
-    - name: Chart Page
-      href: articles/charting/chart-wizard/chart-page.md
-    - name: Diagram Page
-      href: articles/charting/chart-wizard/diagram-page.md
-    - name: Panes Page
-      href: articles/charting/chart-wizard/panes-page.md
-    - name: Axes Page
-      href: articles/charting/chart-wizard/axes-page.md
-    - name: Series Views Page
-      href: articles/charting/chart-wizard/series-views-page.md
-    - name: Point Labels Page
-      href: articles/charting/chart-wizard/point-labels-page.md
-    - name: Chart Titles Page
-      href: articles/charting/chart-wizard/chart-titles-page.md
-    - name: Legend Page
-      href: articles/charting/chart-wizard/legend-page.md
-    - name: Annotations Page
-      href: articles/charting/chart-wizard/annotations-page.md
   - name: Highlighting and Selection Chart Elements
     href: articles/charting/highlighting-and-selection-chart-elements.md
   - name: Zoom a Chart
@@ -988,8 +959,6 @@
             href: articles/report-designer/report-designer-for-winforms/report-designer-tools/data-source-wizard/connect-to-an-entity-framework-data-source/select-the-data-context.md
           - name: Select a Connection String
             href: articles/report-designer/report-designer-for-winforms/report-designer-tools/data-source-wizard/connect-to-an-entity-framework-data-source/select-a-connection-string.md
-          - name: Specify a Connection String
-            href: articles/report-designer/report-designer-for-winforms/report-designer-tools/data-source-wizard/connect-to-an-entity-framework-data-source/specify-a-connection-string.md
           - name: Bind to a Stored Procedure
             href: articles/report-designer/report-designer-for-winforms/report-designer-tools/data-source-wizard/connect-to-an-entity-framework-data-source/bind-to-a-stored-procedure.md
           - name: Select a Data Member
@@ -1254,14 +1223,14 @@
           items:
           - name: Select the Data Context
             href: articles/report-designer/report-designer-for-wpf/report-wizard/data-bound-report/connect-to-an-entity-framework-data-source/select-the-data-context.md
-          - name: Select the Connection String
-            href: articles/report-designer/report-designer-for-wpf/report-wizard/data-bound-report/connect-to-an-entity-framework-data-source/select-the-connection-string.md
-          - name: Specify a Connection String
-            href: articles/report-designer/report-designer-for-wpf/report-wizard/data-bound-report/connect-to-an-entity-framework-data-source/specify-a-connection-string.md
+          - name: Select a Connection String
+            href: articles/report-designer/report-designer-for-wpf/report-wizard/data-bound-report/connect-to-an-entity-framework-data-source/select-a-connection-string.md
           - name: Bind to a Stored Procedure
             href: articles/report-designer/report-designer-for-wpf/report-wizard/data-bound-report/connect-to-an-entity-framework-data-source/bind-to-a-stored-procedure.md
           - name: Select a Data Member
             href: articles/report-designer/report-designer-for-wpf/report-wizard/data-bound-report/connect-to-an-entity-framework-data-source/select-a-data-member.md
+          - name: Configure Filters
+            href: articles/report-designer/report-designer-for-wpf/report-wizard/data-bound-report/connect-to-an-entity-framework-data-source/configure-filters.md
         - name: Connect to an Object Data Source
           href: articles/report-designer/report-designer-for-wpf/report-wizard/data-bound-report/connect-to-an-object-data-source.md
           items:
