--- a/reporting-for-web/toc.yml
+++ b/reporting-for-web/toc.yml
@@ -242,6 +242,10 @@
         href: articles/report-designer/use-report-elements/use-bar-codes/postnet.md
       - name: QR Code
         href: articles/report-designer/use-report-elements/use-bar-codes/qr-code.md
+      - name: GS1 QR Code
+        href: articles/report-designer/use-report-elements/use-bar-codes/gs1-qr-code.md
+      - name: SSCC (Serial Shipping Container Code)
+        href: articles/report-designer/use-report-elements/use-bar-codes/sscc.md
       - name: UPC Shipping Container Symbol (ITF-14)
         href: articles/report-designer/use-report-elements/use-bar-codes/upc-shipping-container-symbol-itf-14.md
       - name: UPC Supplemental 2
