--- a/.github/workflows/build-eud-on-pull-request.yml
+++ b/.github/workflows/build-eud-on-pull-request.yml
@@ -14,10 +14,10 @@ jobs:
       run: git status
     
     - name: Download docfx
-      run: curl https://github.com/dotnet/docfx/releases/download/v2.59.2/docfx.zip -L -o ../docfx.zip
+      run: curl https://github.com/dotnet/docfx/releases/download/v2.77.0/docfx-win-x64-v2.77.0.zip -L -o ../docfx-win-x64-v2.77.0.zip
       
     - name: Expand docfx
-      run: Expand-Archive ../docfx.zip -DestinationPath ../docfx
+      run: Expand-Archive ../docfx-win-x64-v2.77.0.zip -DestinationPath ../docfx
       
     - name: Build site with docfx
       run: ../docfx/docfx.exe build docfx.json --warningsAsErrors
