--- a/.github/workflows/build-eud-on-pull-request.yml
+++ b/.github/workflows/build-eud-on-pull-request.yml
@@ -20,4 +20,4 @@ jobs:
       run: Expand-Archive ../docfx-win-x64-v2.77.0.zip -DestinationPath ../docfx
       
     - name: Build site with docfx
-      run: ../docfx/docfx.exe build docfx.json --warningsAsErrors
+      run: ../docfx/docfx.exe build docfx.json -m _matomoContainerUrl="https://matomo.devexpress.com/js/container_kE7MWPi0.js" --warningsAsErrors
